# CebianDesktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tatus  vite.config.ts  变更记录-2025-06-29.md
docs/: BUILTIN_TOOLS.md  PROJECT_OVERVIEW.md  cebian-vs-cebiandesktop.md
scripts/: dev.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  bridge.rs  commands.rs  config_storage.rs  lib.rs  main.rs  mcp_client.rs  server.rs  tools.rs  workspace.rs
src-tauri/src/commands/: ai.rs  bridge_cmd.rs  config.rs  mcp.rs  misc.rs  mod.rs  tools.rs  workspace.rs
src-tauri/src/tools/: docx_tools.rs  excel_tools.rs  file_ops.rs  mod.rs  net_ops.rs  system_ops.rs
src-tauri/src/workspace/: backup.rs  crud.rs  md.rs  mod.rs  ops.rs  path.rs  types.rs  watcher.rs  zip.rs
src/components/: BridgeStatus.tsx  SkinPopover.tsx
src/components/chat/: AiThoughtProcess.tsx  AskBrowserAiResult.tsx  AskUser.tsx  ChatInput.tsx  ChatView.tsx  ConfirmationBlock.tsx  MessageBlock.tsx  ModelSelector.tsx  SessionList.tsx  ToolCall.tsx  ToolLogViewer.tsx  chat-types.tsx  useStickToBottom.ts
src/components/editor/: CodeMirrorEditor.tsx
src/components/settings/: ContextMenu.tsx  SettingsView.tsx
src/components/settings/sections/: AboutSection.tsx  AdvancedSection.tsx  AppearanceSection.tsx  BackupSection.tsx  BridgeSection.tsx  InstructionsSection.tsx  MCPSection.tsx  PermissionSection.tsx  PromptsSection.tsx  ProvidersSection.tsx  SkillEditor.tsx  SkillFileTree.tsx  SkillsSection.tsx  StorageSection.tsx
src/lib/: browser-icons.ts  commands.ts  compact.ts  constants.ts  db.ts  i18n.tsx  index.ts  interactive-bridge.ts  mcp.ts  permission-gate.ts  prompts.ts  types.ts  useSpeechRecognition.ts  utils.ts  workspace.ts
src/lib/agent/: index.ts  types.ts
src/lib/tools/: index.ts  types.ts
