[workspace]

[package]
name = "cebiandesktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "cebiandesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
ureq = { version = "2.12", features = ["json"] }
winreg = "0.50"
clipboard-win = "5.4"
walkdir = "2"
sysinfo = "0.32"
notify-rust = "4"
zip = "2"
notify = { version = "8", features = ["macos_fsevent"] }
