[workspace]

[package]
name = "cebiandesktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "cebiandesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
# ⚠ 用 native-tls 而不是默认的 rustls，因为 rustls 不信任 Windows 系统证书，
#   导致火绒/代理等 HTTPS 中间人场景下下载工具报 UnknownIssuer 错误。
#   不要改回 rustls，除非你确认用户不需要证书验证回退。
ureq = { version = "2.12", features = ["json", "native-tls"], default-features = false }
# 给 ureq 的 danger_accept_invalid_certs 提供 TLS 连接器
native-tls = "0.2"
# ⚠ GBK 解码依赖。用于解码中文 Windows 上 cmd.exe 的 GBK 输出。
#   之前用 String::from_utf8_lossy，中文直接变乱码。不要删。
encoding_rs = "0.8"
winreg = "0.50"
clipboard-win = "5.4"
calamine = "0.26"
csv = "1.3"
rust_xlsxwriter = "0.82"
regex = "1"
tar = "0.4"
flate2 = "1"
base64 = "0.22"
image = "0.25"
walkdir = "2"
sysinfo = "0.32"
notify-rust = "4"
zip = "2"
notify = { version = "8", features = ["macos_fsevent"] }
